add support for travis

--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,5 @@ deps = pytest
        -rrequirements.txt
 
 commands =
-    pytest --cov-config .coveragerc --cov monolith tests
+    pytest --cov-config .coveragerc --cov flakon tests
     - coveralls
