Added tests for args and updated .yaml test source codes

--- a/flakon/tests/static/api_date_time_test.yaml
+++ b/flakon/tests/static/api_date_time_test.yaml
@@ -124,6 +124,12 @@ paths:
         schema:
           type: string
           format: date-time
+      - in: query
+        name: q
+        schema:
+          type: string
+          format: date-time
+      
     get:
       operationId: "getAllStatisticsbyUserID"
       description: "By accessing this page and providing an existing user ID, you retrieve a set of 6 arrays about the temporal statistics of your runs for the following attributes, respectively: 'distance', 'average speed', 'average heartrate'. 'total elevation gain', 'elapsed time' and 'run names'"
