--- a/flakon/tests/static/api_int_max_test.yaml
+++ b/flakon/tests/static/api_int_max_test.yaml
@@ -125,6 +125,13 @@ paths:
           type: integer
           maximum: 50
           exclusiveMaximum: true
+          
+      - in: query
+        name: q
+        schema:
+          type: integer
+          maximum: 50
+          exclusiveMaximum: True
 
     get:
       operationId: "getAllStatisticsbyUserID"
