--- a/flakon/tests/static/api_multiple_int_min_max_test.yaml
+++ b/flakon/tests/static/api_multiple_int_min_max_test.yaml
@@ -127,6 +127,14 @@ paths:
           maximum: 50
           multipleOf: 15
           exclusiveMaximum: true
+      - in: query
+        name: q
+        schema:
+          type: integer
+          minimum: 10
+          maximum: 50
+          multipleOf: 15
+          exclusiveMaximum: True
 
     get:
       operationId: "getAllStatisticsbyUserID"
