--- a/flakon/tests/static/api_boolean_test.yaml
+++ b/flakon/tests/static/api_boolean_test.yaml
@@ -123,6 +123,10 @@ paths:
         required: true
         schema:
           type: boolean
+      - in: query
+        name: q
+        schema:
+          type: boolean
     get:
       operationId: "getAllStatisticsbyUserID"
       description: "By accessing this page and providing an existing user ID, you retrieve a set of 6 arrays about the temporal statistics of your runs for the following attributes, respectively: 'distance', 'average speed', 'average heartrate'. 'total elevation gain', 'elapsed time' and 'run names'"
