--- a/flakon/tests/static/api_num_min_test.yaml
+++ b/flakon/tests/static/api_num_min_test.yaml
@@ -125,6 +125,12 @@ paths:
           type: number
           minimum: 50
           exclusiveMinimum: True
+      - in: query
+        name: q
+        schema:
+          type: number
+          minimum: 50
+          exclusiveMinimum: True
     get:
       operationId: "getAllStatisticsbyUserID"
       description: "By accessing this page and providing an existing user ID, you retrieve a set of 6 arrays about the temporal statistics of your runs for the following attributes, respectively: 'distance', 'average speed', 'average heartrate'. 'total elevation gain', 'elapsed time' and 'run names'"
