--- a/tests/static/api_min_max_string_header.yaml
+++ b/tests/static/api_min_max_string_header.yaml
@@ -122,15 +122,21 @@ paths:
         description: "The id of the user whose statistics you want to access"
         required: true
         schema:
-          type: boolean
+          type: string
+          maximum: 12
+          minimum: 5
       - in: query
         name: q
         schema:
-          type: boolean
+          type: string
+          maximum: 12
+          minimum: 5
       - in: header
         name: X-Request-ID
         schema:
-          type: boolean
+          type: string
+          maximum: 12
+          minimum: 5
         required: true
     get:
       operationId: "getAllStatisticsbyUserID"
