--- a/tests/static/api_int_max_test_header.yaml
+++ b/tests/static/api_int_max_test_header.yaml
@@ -122,16 +122,24 @@ paths:
         description: "The id of the user whose statistics you want to access"
         required: true
         schema:
-          type: boolean
+          type: integer
+          maximum: 50
+          exclusiveMaximum: true
+          
       - in: query
         name: q
         schema:
-          type: boolean
+          type: integer
+          maximum: 50
+          exclusiveMaximum: True
       - in: header
         name: X-Request-ID
         schema:
-          type: boolean
+          type: integer
+          maximum: 50
+          exclusiveMaximum: True
         required: true
+
     get:
       operationId: "getAllStatisticsbyUserID"
       description: "By accessing this page and providing an existing user ID, you retrieve a set of 6 arrays about the temporal statistics of your runs for the following attributes, respectively: 'distance', 'average speed', 'average heartrate'. 'total elevation gain', 'elapsed time' and 'run names'"
